--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 asgiref==3.8.1
+dj-database-url==2.1.0
 Django==5.0.4
+django-heroku==0.3.1
+gunicorn==22.0.0
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
 plotly==5.21.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.6
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
 sqlparse==0.5.0
 tenacity==8.2.3
+typing_extensions==4.11.0
 tzdata==2024.1
+whitenoise==6.6.0
